add fail ci on codecov fail, configure JaCoCo